--- a/Bank_Turnover_Analysis.ipynb
+++ b/Bank_Turnover_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiukM+4phkH7GqmSEKRX3/",
+      "authorship_tag": "ABX9TyOecV6gcZpeOoj8RCPKR+oy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "lkCi_np54J5R"
       },
-      "execution_count": 43,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -117,15 +117,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h6ld_mUV52E0",
-        "outputId": "6a1e25da-c0b3-45f6-a031-517424bd29c3"
+        "outputId": "997bf035-3867-47ee-d744-5fe9b08f6e76"
       },
-      "execution_count": 44,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ]
@@ -139,7 +139,7 @@
       "metadata": {
         "id": "wm3DOfRK7wmE"
       },
-      "execution_count": 45,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "id": "qZc607R28BDL",
         "outputId": "7ac43bd3-5d2a-412e-d304-5027605aef6f"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +582,7 @@
         "id": "pnHgC8gE8uvu",
         "outputId": "59e7ab5e-2583-449c-8643-0cbd27b317b0"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +597,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Checking the Attributes Names**"
+        "#### **Checking the Columns Names**"
       ],
       "metadata": {
         "id": "mWcW9HKI9-c6"
@@ -615,7 +615,7 @@
         "id": "LQE5iwOe-G2C",
         "outputId": "b7190c99-b07b-4856-f69e-e1b3d517386d"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Attributes Explanation:**\n",
+        "##### **Columns Explanation:**\n",
         "\n",
         "\n",
         "1.   RowNumber: Identification for each row.\n",
@@ -689,7 +689,7 @@
         "id": "Iz1Z-jr06t_y",
         "outputId": "49923cd1-83c9-432a-ae6c-cd910c1d6f3d"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +756,7 @@
         "id": "Jaq40mt287-B",
         "outputId": "2eac4fad-bbb1-42f2-99af-b120a782b765"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1134,7 +1134,7 @@
         "id": "P6756F-i-vd3",
         "outputId": "8050c352-7785-43ea-f0fd-ab58ad4859fb"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1167,7 +1167,7 @@
         "id": "dKM2-t4PC3t9",
         "outputId": "818c9140-6721-4a95-b83a-a80372640c8c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1544,7 +1544,7 @@
         "id": "39WM3YUrEc3r",
         "outputId": "e6318075-e12d-4a02-efd3-4af0b9a4a7a0"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1925,7 +1925,7 @@
       "metadata": {
         "id": "BSH36Dy7FQ4P"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1941,7 +1941,7 @@
         "id": "c1R8HaZ2FTB4",
         "outputId": "d5222631-0af4-4420-cca3-2b11f0e6e1b4"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2280,6 +2280,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Insight:**\n",
+        "\n",
+        "We will retain the four columns with binary numbers as we believe they will be beneficial for the statistical analysis section later. However, to make the graphs more understandable for those who may not be familiar with binary representations, we will replace 1 and 0 with \"Yes\" and \"No\" in the coding of each graph during the data visualization section."
+      ],
+      "metadata": {
+        "id": "C7tG8zcSi8TT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.info()"
@@ -2291,7 +2302,7 @@
         "id": "cTNDV-_vFqBZ",
         "outputId": "a90cbe27-ff1e-4aa5-e0c3-16f7154232c6"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2385,7 +2396,7 @@
         "id": "BftUqUJxSEWa",
         "outputId": "32f48735-5b42-4745-d241-6a81308dfa1f"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
