--- a/Bank_Turnover_Analysis.ipynb
+++ b/Bank_Turnover_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIZCPjfBZTBzj6fQ3pYeGP",
+      "authorship_tag": "ABX9TyOYOL5puujM5kfyksmd3TWM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2531,7 +2531,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**3. Displaying Customer Turnover by Number of Product**####"
+        "####**3. Displaying Customer Turnover by Number of Product**"
       ],
       "metadata": {
         "id": "TYcGb5fOCWmm"
@@ -2594,7 +2594,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**4. Displaying Customer Turnover by Active Member or Not**####"
+        "####**4. Displaying Customer Turnover by Active Member or Not**"
       ],
       "metadata": {
         "id": "r_QDzqI6p5Xa"
@@ -3076,7 +3076,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**1. Correlation Matrix**####"
+        "####**1. Correlation Matrix**"
       ],
       "metadata": {
         "id": "6hxA9eKqqCtK"
@@ -3138,7 +3138,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**2. Encoding Categorical Columns and Splitting the Dataset**####"
+        "####**2. Encoding Categorical Columns and Splitting the Dataset**"
       ],
       "metadata": {
         "id": "Pur43syvub7d"
@@ -3209,7 +3209,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**Model Creation using Logistic Regression**####\n",
+        "####**Model Creation using Logistic Regression**\n",
         "\n",
         "Logistic regression is a type of statistical analysis used to predict the outcome of a variable that can be one of two types; 0 (no chance) & 1 (certain to happen)"
       ],
@@ -3286,7 +3286,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**Feature Importance in the Model Prediction**####"
+        "####**Feature Importance in the Model Prediction**"
       ],
       "metadata": {
         "id": "x0U9wIqk--UY"
@@ -3363,7 +3363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**Key-Points**####\n",
+        "####**Key-Points**\n",
         "\n",
         "1.   **Model Performance**:\n",
         "The logistic regression model provided a reasonable baseline performance with an accuracy of approximately 79%. However, it struggled to correctly identify churned customers, which is evident from the low recall and F1-score for the positive class.\n",
@@ -3374,7 +3374,7 @@
         "Older customers were more likely to churn, highlighting a potential area to explore tailored retention strategies.\n",
         "The presence of a credit card did not show a strong correlation with churn, suggesting that simply having a credit card isn't a deciding factor in customer retention.\n",
         "\n",
-        "####**Strategic Recommendations**####\n",
+        "####**Strategic Recommendations**\n",
         "\n",
         "\n",
         "1.   Investigate the reasons behind the churn of older customers and consider offering products or services that might be more appealing to them.\n",
