--- a/Bank_Turnover_Analysis.ipynb
+++ b/Bank_Turnover_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYOL5puujM5kfyksmd3TWM",
+      "authorship_tag": "ABX9TyPB5mJ+ZqzCTp4SmkLfepOy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2363,7 +2363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**1. Displaying customer turnover distribution**####\n",
+        "####**1. Displaying customer turnover distribution**\n",
         "\n",
         "\n"
       ],
@@ -2442,7 +2442,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**2. Displaying Customer Turnover by Gender**####"
+        "####**2. Displaying Customer Turnover by Gender**"
       ],
       "metadata": {
         "id": "DO_40BeIrsv-"
