--- a/Bank_Turnover_Analysis.ipynb
+++ b/Bank_Turnover_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9HtIiAuOkhzVuG2EXB7MP",
+      "authorship_tag": "ABX9TyNtxQTskTjryiR7UVfQfl7C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,14 +73,9 @@
         "\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score, classification_report\n",
-        "\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "\n",
         "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score ,f1_score\n",
-        "from sklearn.metrics import confusion_matrix, roc_curve, roc_auc_score"
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score ,f1_score"
       ],
       "metadata": {
         "id": "lkCi_np54J5R"
@@ -655,7 +650,7 @@
         "11.  HasCrCard: It is a binary variable with a value of 1 if the customer possesses a credit card and 0 otherwise.\n",
         "12.  IsActiveMember: It is a binary variable indicating whether the customer is an active member (1) or not (0) within the bank.\n",
         "13.  EstimatedSalary: It provides an approximation of the customer's income level, which can be relevant for analyzing turnover behavior.\n",
-        "14.  Exited: It indicates whether a customer has churned (1) or not (0) from the bank.\n",
+        "14.  Exited: It indicates whether a customer has turnover (1) or not (0) from the bank.\n",
         "15.  Complain: It refers to customer has complaint or not.\n",
         "16.  Satisfaction Score: It refers to the score provided by the customer for their complaint.\n",
         "17.  Card Type: Type of card that customer hold(Diamond,Gold,Platinum,Silver)\n",
@@ -2431,8 +2426,9 @@
         "\n",
         "\n",
         "\n",
-        "1.   There are huge gap on customer leaving(Yes) and customer stayed(No).\n",
-        "2.   We have to do further analysis on why customer chose to stay or leaving the bank\n",
+        "1.   The dataset shows a significant difference between the number of customers who have left the bank (\"Yes\") and those who have stayed (\"No\").\n",
+        "2.   The number of customers who stayed is greater, indicating an imbalance in the dataset.\n",
+        "3.   Further analysis is needed to understand the reasons behind customers' decisions to stay with or leave the bank.\n",
         "\n"
       ],
       "metadata": {
@@ -2634,7 +2630,7 @@
         "\n",
         "\n",
         "1.   IsActiveMember: Indicates active membership status (1 = Active, 0 = Inactive).\n",
-        "2.   Active members show a significantly lower churn rate compared to inactive members, highlighting the importance of engagement in customer retention strategies.\n",
+        "2.   Active members show a significantly lower turnover rate compared to inactive members, highlighting the importance of engagement in customer retention strategies.\n",
         "\n",
         "##### **Recommendation:**\n",
         "It is a loss if a bank loses its customer. Below are the few suggestions that can keep customer running away from a bank:\n",
@@ -3067,7 +3063,7 @@
       "source": [
         "##### **Insight:**\n",
         "\n",
-        "We change back the exited value from Yes/No to 1/0 as we will proceed to do with the machine learning process"
+        "We have converted the 'Exited' values from 'Yes/No' back to '1/0'. This change will facilitate the upcoming steps in our machine learning process."
       ],
       "metadata": {
         "id": "1s2MUjeJrfOc"
@@ -3211,7 +3207,7 @@
       "source": [
         "####**Model Creation using Logistic Regression**\n",
         "\n",
-        "Logistic regression is a type of statistical analysis used to predict the outcome of a variable that can be one of two types; 0 (no chance) & 1 (certain to happen)"
+        "Logistic Regression is a type of statistical analysis used to predict the outcome of a variable that can be one of two types; 0 (no chance) & 1 (certain to happen)"
       ],
       "metadata": {
         "id": "Sfg7OZjPxoC8"
@@ -3366,72 +3362,27 @@
         "####**Key-Points**\n",
         "\n",
         "1.   **Model Performance**:\n",
-        "The logistic regression model provided a reasonable baseline performance with an accuracy of approximately 79%. However, it struggled to correctly identify churned customers, which is evident from the low recall and F1-score for the positive class.\n",
+        "The logistic regression model provided a reasonable baseline performance with turnover customers, which is evident from the low recall and F1-score for the positive class.\n",
         "2.   **Feature Importance**:\n",
-        "The feature importance analysis from the logistic regression model can provide insights into which factors are most influential in predicting customer churn. Important features may include customer age, account balance, number of products, credit score, and activity level. Understanding these can help inform strategies to retain customers.\n",
+        "The feature importance analysis from the logistic regression model can provide insights into which factors are most influential in predicting customer turnover. Important features may include customer age, account balance, number of products, credit score, and activity level. Understanding these can help inform strategies to retain customers.\n",
         "3.   **Business Insights**:\n",
-        "Active membership appears to be a strong indicator of retention, suggesting that efforts to engage customers could reduce churn.\n",
-        "Older customers were more likely to churn, highlighting a potential area to explore tailored retention strategies.\n",
-        "The presence of a credit card did not show a strong correlation with churn, suggesting that simply having a credit card isn't a deciding factor in customer retention.\n",
+        "Active membership appears to be a strong indicator of retention, suggesting that efforts to engage customers could reduce turnover.\n",
+        "Older customers were more likely to turnover, highlighting a potential area to explore tailored retention strategies.\n",
+        "The presence of a credit card did not show a strong correlation with turnover, suggesting that simply having a credit card isn't a deciding factor in customer retention.\n",
         "\n",
         "####**Strategic Recommendations**\n",
         "\n",
         "\n",
-        "1.   Investigate the reasons behind the churn of older customers and consider offering products or services that might be more appealing to them.\n",
-        "2.   Enhance customer engagement and satisfaction, perhaps by improving customer service or offering loyalty programs, as active members are less likely to churn.\n",
-        "3.  Consider a more detailed analysis of the customers with high balances who churned to understand if there are specific services or products that are not meeting their needs.\n",
+        "1.   Investigate the reasons behind the turnover of older customers and consider offering products or services that might be more appealing to them.\n",
+        "2.   Enhance customer engagement and satisfaction, perhaps by improving customer service or offering loyalty programs, as active members are less likely to turnover.\n",
+        "3.  Consider a more detailed analysis of the customers with high balances who exited to understand if there are specific services or products that are not meeting their needs.\n",
         "\n",
-        "The goal of this analysis is not only to predict churn but also to understand its drivers so that targeted actions can be taken to reduce it. With these insights, a business can develop focused retention strategies to maintain a healthier customer base.\n",
+        "The goal of this analysis is not only to predict turnover but also to understand its drivers so that targeted actions can be taken to reduce it. With these insights, a business can develop focused retention strategies to maintain a healthier customer base.\n",
         "\n"
       ],
       "metadata": {
         "id": "qCT5yrXFFIqJ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "\n",
-        "# Initializing the Decision Tree Classifier\n",
-        "decision_tree_model = DecisionTreeClassifier(random_state=42)\n",
-        "\n",
-        "# Training the model on the training data\n",
-        "decision_tree_model.fit(X_train, y_train)\n",
-        "\n",
-        "# Predicting on the test set\n",
-        "y_pred_tree = decision_tree_model.predict(X_test)\n",
-        "\n",
-        "# Evaluating the model\n",
-        "accuracy_tree = accuracy_score(y_test, y_pred_tree)\n",
-        "report_tree = classification_report(y_test, y_pred_tree)\n",
-        "\n",
-        "accuracy_tree, report_tree\n",
-        "\n",
-        "\n",
-        "print(\"F1 Score of the Model is =>\", f1_score(y_test, y_pred_tree))\n",
-        "print(\"Recall Score of the Model is =>\", recall_score(y_test, y_pred_tree))\n",
-        "print(\"Precision Score of the Model is =>\", precision_score(y_test, y_pred_tree))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "U4fpBVCoKAzV",
-        "outputId": "2fa95094-e9e8-4d21-859c-8fd9bd483626"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "F1 Score of the Model is => 0.9901477832512315\n",
-            "Recall Score of the Model is => 0.9852941176470589\n",
-            "Precision Score of the Model is => 0.995049504950495\n"
-          ]
-        }
-      ]
     }
   ]
 }
